experimental/parser/testdata/parser/field/incomplete.proto.stderr.txt
error: unexpected identifier after definition
  --> testdata/parser/field/incomplete.proto:24:5
   | 
24 |     foo.Bar name;
   |     ^^^ expected `;`
  help: consider inserting a `;`
   | 
23 |     foo.bar name = 1;
   |                     +

error: unexpected integer literal in definition
  --> testdata/parser/field/incomplete.proto:25:18
   | 
25 |     foo.Bar name 1;
   |                  ^ expected `=`
  help: consider inserting a `=`
   | 
25 |     foo.Bar name = 1;
   |                  ++  

error: unexpected identifier after definition
  --> testdata/parser/field/incomplete.proto:28:5
   | 
28 |     foo..bar name = 1;
   |     ^^^ expected `;`
  help: consider inserting a `;`
   | 
26 |     foo.bar name = 1;
   |                     +

error: unexpected `.` after `.`
  --> testdata/parser/field/incomplete.proto:28:9
   | 
28 |     foo..bar name = 1;
   |         ^ expected identifier or `(...)`
  help: delete the extra `.`
   | 
28 | -     foo..bar name = 1;
28 | +     foo.bar name = 1;
   | 

error: unexpected `=` after qualified name
  --> testdata/parser/field/incomplete.proto:29:19
   | 
29 |     foo.bar name. = 1;
   |                   ^ expected identifier or `(...)`
  help: delete the extra `.`
   | 
29 | -     foo.bar name. = 1;
29 | +     foo.bar name = 1;
   | 

encountered 5 errors
